<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Money</string>
    <string name="account_label">Account</string>
    <string name="balance_label">Balance</string>
    <string name="action_settings">Settings</string>
    <string name="action_account">Accounts</string>
    <string name="action_categories">Categories</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_value">Value </string>
    <string name="transaction_account">Account/Card</string>
    <string name="transaction_category">Category</string>
    <string name="transaction_description">Description</string>
    <string name="transaction_date_lay">Date: </string>
    <string name="transaction_value_lay">Value:R$ </string>
    <string name="transaction_account_lay">Account: </string>
    <string name="transaction_category_lay">Category: </string>
    <string name="transaction_comment_lay">Comment: </string>
    <string name="btn_datepick_desc">Click to select the date</string>
    <string name="title_activity_insert_edit_category">InsertEditCategoryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_category">Manage Categories</string>
    <string name="insert">Insert</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_account">Manage Accounts</string>
    <string name="acc_name">Name</string>
    <string name="acc_value">Value</string>
    <string name="cat_name">Name</string>
    <string name="txtAccList">Account List</string>
    <string name="txtCatNameList">Categories</string>
    <string name="buttonSaveIncome">Income</string>
    <string name="buttonSaveOutcome">Outcome</string>
    <string name="btnAllMov">See all movements</string>
    <string name="movements_tittle">Movements</string>
    <string name="title_activity_view_all_transactions">Transactions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_transaction">TransactionActivity</string>

</resources>
