<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CategoryActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/insertCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert"
            android:layout_weight="1"
            style="@android:style/ButtonBar"
            android:onClick="insertCategory" />

        <Button
            android:id="@+id/editCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" 
            android:layout_weight="1"
            style="@android:style/ButtonBar"
            android:onClick="editCategory"/>

        <Button
            android:id="@+id/deleteCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" 
            android:layout_weight="1"
            style="@android:style/ButtonBar"
            android:onClick="removeCategory"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtCatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat_name" />

    <EditText
        android:id="@+id/inputCatName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtCatNameList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCatNameList"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:clickable="true">
    </ListView>

</LinearLayout>
